<resources>
    <string name="app_name">Spend with Brain</string>
    <string name="spend_with_brain">Spend with brain</string>
    <string name="enter_credentials">Enter your credentials to become again active</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="no_account">Have no account?</string>
    <string name="register">Register</string>
    <string name="my_email">My email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_text">Let us know more about you</string>
    <string name="name">Name</string>
    <string name="have_account">Have already an account?</string>
    <string name="wrong_name">Insert First Name and Last Name</string>
    <string name="wrong_email">Insert a valid Email Address</string>
    <string name="wrong_password">Password must have: upper case letter, lower case letter, number, special characters and must be at least 6 characters long</string>
    <string name="main_page">Main page</string>
    <string name="converter">Converter</string>
    <string name="logout">Logout</string>
    <string name="budget">Budget</string>
    <string name="expenses">Expenses</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="my_budget">My Budget</string>
    <string name="my_expenses">My Expenses</string>
    <string name="add_action">Add action</string>
    <string name="date">Date</string>
    <string name="hint_text">Hint text</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="hint_date">Insert Date</string>
    <string name="hint_amount">Insert Amount</string>
    <string name="hint_details">Insert Details</string>
    <string name="budget_saved">New Budget saved</string>
    <string name="budget_edited">New Budget edited</string>
    <string name="expense_saved">New Expense saved</string>
    <string name="expense_edited">New Expense edited</string>
    <string name="add_budget">Add Budget</string>
    <string name="add_expense">Add Expense</string>
    <string name="base_information">Base information</string>
    <string name="current_balance">Current Balance</string>
    <string name="this_week_expenses">This week expenses</string>
    <string name="this_month_expenses">This month expenses</string>
    <string name="details">Details</string>
    <string name="today_expenses">Today Expenses</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="expense_details_month">Expense details this month</string>
    <string name="positive_balance">Positive Balance</string>
    <string name="negative_balance">Negative Balance</string>
    <string name="total_expensed">Total expensed</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>
    <string name="this_year">This year</string>
    <string name="food">Food</string>
    <string name="car">Car</string>
    <string name="clothes">Clothes</string>
    <string name="savings">Savings</string>
    <string name="health">Health</string>
    <string name="beauty">Beauty</string>
    <string name="travel">Travel</string>
    <string name="string_0">0</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="dodgy_api_date">Converted using BNR at date %1s</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="wrong_data">Wrong data inserted</string>
    <string name="registered_success">Successfully Registered</string>
    <string name="registered_failed">Registration Failed</string>
    <string name="login_success">Successfully Login</string>
    <string name="password_reset_success">Successfully Reset Password, please check your email</string>
    <string name="password_reset_failed">Failed Reset Password</string>
    <string name="login_failed">Login Failed</string>
    <string name="permission_needed">Permission needed</string>
    <string name="camera_permission_message">This permission is needed to take photos of your invoices with the camera</string>
    <string name="storage_permission_message">This permission is needed to use photos from local storage</string>
    <string name="hello_user">Hello %1s</string>
    <string name="retrieve_failed">Failed to retrieve info</string>
    <string name="response_received">The response was received</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_message">We need your email to send the instructions to reset password</string>
    <string name="edit_action">Edit action</string>
    <string name="mandatory_fields">Date and amount can\'t be empty</string>
    <string name="notification_msg">\"Your balance is: %1s\"</string>
    <string name="password_err_empty">Password must not be empty</string>
    <string name="password_err_digits">Password must contain at least one digit</string>
    <string name="password_err_lowercase">Password must contain at least one lowercase letter</string>
    <string name="password_err_uppercase">Password must contain at least one uppercase letter</string>
    <string name="password_err_specialChar">Password must contain at least one special character</string>
    <string name="password_err_whiteSpace">Password must not contain spaces</string>
    <string name="password_err_length">Password must be at least 6 characters long</string>
    <string name="menu_button">Menu Button</string>
    <string name="save">Save</string>
    <string name="currency_retrieve_failed">Currency retrieved failed</string>
    <string name="currency_retrieve_success">Currency retrieved successful</string>
    <string name="save_currency_failed">Currency save failed</string>
    <string name="save_currency_success">Currency save successful</string>
    <string name="change_currency_title">Change currency</string>
    <string name="change_currency_text">Change the currency in the entire application</string>
    <string name="preferred_currency">Saved preferred currency</string>
    <string name="see_more">See More</string>
    <string name="hide">Hide</string>
    <string name="get_expense_failed">Get expense failed</string>
    <string name="get_expense_successful">Get expense successful</string>
</resources>