<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>
        <import type="android.view.View" />
        <import type="com.example.expenseappmvvm.utils.enums.FormErrorsEnum" />
        <variable
            name="viewModel"
            type="com.example.expenseappmvvm.screens.loginScreen.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGreen"
        android:focusableInTouchMode="true"
        tools:context=".screens.loginScreen.LoginActivity">


        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="@dimen/space_98dp"
            android:layout_height="@dimen/space_98dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_34dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@{viewModel.showHide?@string/register_text: @string/enter_credentials}"
            tools:text="@string/enter_credentials"
            android:textColor="@color/colorBlack"
            app:changeTextSize="@{viewModel.showHide?18:14}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_name_register"
            android:layout_width="@dimen/space_0dp"
            android:layout_height="@dimen/space_56dp"
            android:layout_marginTop="@dimen/space_25dp"
            android:background="@color/colorWhite"
            android:focusable="false"
            android:visibility="@{viewModel.showHide?View.VISIBLE : View.GONE}"
            android:paddingStart="@dimen/space_16dp"
            android:paddingEnd="@dimen/space_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_text"
            app:layout_constraintWidth_percent="0.8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_name_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:focusable="true"
                android:fontFamily="@font/roboto_normal"
                android:layout_marginBottom="@dimen/space_9dp"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/text_16sp"
                android:text="@={viewModel.username}"
                tools:text="FirstName LastName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/name_err_text_view"
            android:layout_width="@dimen/space_0dp"
            android:layout_height="wrap_content"
            android:text="@string/wrong_name"
            android:textColor="@color/colorRed"
            android:visibility="@{viewModel.formErrorsList.contains(FormErrorsEnum.MISSING_NAME) ? View.VISIBLE: View.GONE}"
            app:layout_constraintBottom_toTopOf="@+id/text_input_email_login"
            app:layout_constraintEnd_toEndOf="@+id/text_input_name_register"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="@+id/text_input_name_register"
            app:layout_constraintTop_toBottomOf="@+id/text_input_name_register" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_email_login"
            android:layout_width="@dimen/space_0dp"
            android:layout_height="@dimen/space_56dp"
            android:layout_marginTop="@dimen/space_25dp"
            android:background="@color/colorWhite"
            android:focusable="false"
            android:paddingStart="@dimen/space_16dp"
            android:paddingEnd="@dimen/space_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_name_register"
            app:layout_constraintWidth_percent="0.8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_email_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/space_9dp"
                android:background="@null"
                android:focusable="true"
                android:fontFamily="@font/roboto_normal"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/text_16sp"
                android:text="@={viewModel.email}"
                tools:text="test_mobile@gmail.com" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/email_err_text_view"
            android:layout_width="@dimen/space_0dp"
            android:layout_height="wrap_content"
            android:text="@string/wrong_email"
            android:textColor="@color/colorRed"
            android:visibility="@{viewModel.formErrorsList.contains(FormErrorsEnum.INVALID_EMAIL) ? View.VISIBLE: View.GONE}"
            app:layout_constraintBottom_toTopOf="@+id/text_input_password_login"
            app:layout_constraintEnd_toEndOf="@+id/text_input_email_login"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="@+id/text_input_email_login"
            app:layout_constraintTop_toBottomOf="@+id/text_input_email_login" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_password_login"
            android:layout_width="@dimen/space_0dp"
            android:layout_height="@dimen/space_56dp"
            android:layout_marginTop="@dimen/space_25dp"
            android:background="@color/colorWhite"
            android:focusable="false"
            android:paddingStart="@dimen/space_16dp"
            android:paddingEnd="@dimen/space_5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_email_login"
            app:layout_constraintWidth_percent="0.8"
            app:passwordToggleDrawable="@drawable/password_visibility_selector"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorGreen">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_password_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/space_9dp"
                android:background="@null"
                android:focusable="true"
                android:fontFamily="@font/roboto_normal"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/text_16sp"
                android:text="@={viewModel.password}"
                tools:text="Parola123#" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/password_err_text_view"
            android:layout_width="@dimen/space_0dp"
            android:layout_height="wrap_content"
            android:text="@{viewModel.passwordErr}"
            app:autoSizeTextType="uniform"
            android:textColor="@color/colorRed"
            app:layout_constraintBottom_toTopOf="@+id/btn_login"
            app:layout_constraintEnd_toEndOf="@+id/text_input_password_login"
            app:layout_constraintStart_toStartOf="@+id/text_input_password_login"
            app:layout_constraintTop_toBottomOf="@+id/text_input_password_login"
            tools:text="Password is not valid" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="@dimen/space_39dp"
            android:layout_marginTop="@dimen/space_30dp"
            android:background="@drawable/btn_login"
            android:fontFamily="@font/montserrat_regular"
            android:onClick="@{()->viewModel.onLoginClick()}"
            android:text="@{viewModel.showHide?@string/register: @string/login}"
            tools:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_password_login"
            app:layout_constraintWidth_percent="0.4" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_53dp"
            android:fontFamily="@font/roboto_normal"
            android:text="@string/forgot_password"
            android:visibility="@{viewModel.showHide?View.GONE : View.VISIBLE}"
            android:textColor="@color/colorOrange"
            android:textSize="@dimen/text_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <TextView
            android:id="@+id/no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_normal"
            android:text="@{viewModel.showHide?@string/have_account: @string/no_account}"
            tools:text="@string/no_account"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_16sp"
            app:changeMarginTop="@{viewModel.showHide?110:35}"
            app:layout_constraintEnd_toStartOf="@id/register_textView_link"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password" />

        <TextView
            android:id="@+id/register_textView_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_30dp"
            android:fontFamily="@font/roboto_normal"
            android:onClick="@{()->viewModel.onRegisterLinkClick()}"
            android:text="@{viewModel.showHide?@string/login: @string/register}"
            tools:text="@string/register"
            android:textColor="@color/colorOrange"
            android:textSize="@dimen/text_16sp"
            app:changeMarginTop="@{viewModel.showHide?110:35}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/no_account"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>