<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.example.expenseappmvvm.screens.mainScreen.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.mainScreen.HomeActivity">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.bottomappbar.BottomAppBar
                android:id="@+id/bottom_app_bar"
                style="@style/Widget.MaterialComponents.BottomAppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:theme="@style/AppThemeMaterial"
                app:backgroundTint="@color/colorGreen"
                app:fabAlignmentMode="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/space_70dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:id="@+id/budgetTab"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/budget_image"
                            android:layout_width="@dimen/space_30dp"
                            android:layout_height="@dimen/space_30dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_budget" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/my_budget"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/text_16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="?attr/actionBarSize"/>

                    <LinearLayout
                        android:id="@+id/expenseTab"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/expense_image"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_expenses" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/my_expenses"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/text_16sp" />
                    </LinearLayout>
                </LinearLayout>

            </com.google.android.material.bottomappbar.BottomAppBar>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:contentDescription="@string/menu_button"
                android:onClick="@{()->viewModel.onLogoutClick()}"
                android:src="@drawable/logout"
                app:backgroundTint="@color/colorOrange"
                app:layout_anchor="@id/fabMenu"
                app:tint="@android:color/white" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabConverter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:contentDescription="@string/menu_button"
                android:onClick="@{()->viewModel.onCurrencyConverterClick()}"
                android:src="@drawable/ic_euro"
                app:backgroundTint="@color/colorOrange"
                app:layout_anchor="@id/fabMenu"
                app:tint="@android:color/white" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabAddAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:contentDescription="@string/add_action"
                android:onClick="@{()->viewModel.onAddActionClick()}"
                android:src="@drawable/ic_add_action"
                app:backgroundTint="@color/colorOrange"
                app:layout_anchor="@id/fabMenu"
                app:tint="@android:color/white" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/menu_button"
                android:src="@drawable/logo"
                app:backgroundTint="@color/colorOrange"
                app:layout_anchor="@id/bottom_app_bar"
                app:tint="@android:color/white"
                android:layout_marginBottom="45dp"/>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
